{{$NEXT}}

1.28   2016-05-21

- Fixed handling of some floating point epochs. Because DateTime treated the
  epoch like a string instead of a number, certain epochs with a non-integer
  value ended up treated like integers (Perl is weird). Patch by Christian
  Hansen. GitHub #15. This also addresses the problem that GitHub #6 brought
  up.


1.27   2016-05-13

- Added an environment variable PERL_DATETIME_DEFAULT_TZ to globally set the
  default time zone. Using this is very dangerous! Be careful!. Patch by
  Ovid. GitHub #14.


1.26   2016-03-21

- Switched from Module::Build to ExtUtils::MakeMaker. Implementation by Karen
  Etheridge. GitHub #13.


1.25   2016-03-06

- DateTime->from_object would die if given a DateTime::Infinite object. Now it
  returns another DateTime::Infinite object. Reported by Greg Oschwald. RT
  #112712.


1.24   2016-02-29

- The last release partially broke $dt->time. If you passed a value to use as
  unit separator, this was ignored. Reported by Sergiy Zuban. RT #112585.


1.23   2016-02-28

- Make all DateTime::Infinite objects return the system's representation of
  positive or negative infinity for any method which returns a number of
  string representation (year(), month(), ymd(), iso8601(), etc.). Previously
  some of these methods could return "Nan", "-Inf--Inf--Inf", and other
  confusing outputs. Reported by Greg Oschwald. RT #110341.


1.22   2016-02-21 (TRIAL RELEASE)

- Fixed several issues with the handling of non-integer values passed to
  from_epoch().

  This method was simply broken for negative values, which would end up being
  incremented by a full second, so for example -0.5 became 0.5.

  The method did not accept all valid float values. Specifically, it did not
  accept values in scientific notation.

  Finally, this method now rounds all non-integer values to the nearest
  millisecond. This matches the precision we can expect from Perl itself (53
  bits) in most cases.

  Patch by Christian Hansen. GitHub #11.

